assign1/tests/parsing/bad/top-level-num.c
#include "FenneC.h"

int 343() {}

int main() {}